# baulog

./: .env.example  .gitignore  ASYNC_IMPLEMENTATION.md  ASYNC_QUEUE_GUIDE.md  README.md  WEBHOOK_GUIDE.md  audio_transcriber.py  entire-agent-baulog  main.py  owner_repository.py  pyproject.toml  queue_manager.py  seed.py  webhook_examples.py  worker.py
.baulog/hooks/: entire.json
06/39276a58a0/: metadata.json
06/39276a58a0/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
15/c329a50d97/: metadata.json
15/c329a50d97/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
22/d3c3787cfd/: metadata.json
22/d3c3787cfd/0/: content_hash.txt  full.jsonl  metadata.json
2a/6ddad20820/: metadata.json
2a/6ddad20820/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
3f/8504887e16/: metadata.json
3f/8504887e16/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
44/aa4ed302f0/: metadata.json
44/aa4ed302f0/0/: content_hash.txt  full.jsonl  (+2 more)
4f/ed92987a78/: metadata.json
58/c50dbfb232/: metadata.json
6f/a62e3e127a/: metadata.json
71/29f2af9af7/: metadata.json
80/5ed12efc5f/: metadata.json
86/6e04517215/: metadata.json
92/64dbdaca53/: metadata.json
agents/: __init__.py  audio_transcriber.py  config.py  content_agent.py  query_agent.py  relevancy_agent.py
c5/3f383a05e9/: metadata.json
c7/199ce183bf/: metadata.json
context_engine/: __init__.py  engine.py  markdown_parser.py  models.py
data/properties/: weg-immanuelkirchstrasse-26.md
webhooks/: __init__.py  email_handler.py  erp_handler.py  slack_handler.py
(+37 files in other folders)
